# ckb-spv-rust

./: .gitignore  Cargo.toml  Makefile  README.md
rpc-data/: testVectors.json
src/: generate_pow_test.rs  generate_sol_test.rs  lib.rs  main.rs  proof_generator.rs  proof_verifier.rs  types.rs
src/types/: Makefile  convert.rs  mod.rs  transaction_proof.rs
src/types/schemas/: basic.mol  ckb_tx_proof.mol  transaction_proof.mol
test-data/: eaglesong_fuzzy_test.json  generateHeadersBenchData.js  testSPV.json  testVectors.json
